src/main/kotlin/com/example/server/global/error/properties/ErrorProperty.kt
package com.example.server.global.error.properties

interface ErrorProperty {
    val errorStatus: Int
    val errorMessage: String
}
